new URI instead of new URL, photobucketrupper.